fixed model mapper building to buildingdto